--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,24 +7,28 @@ gcc-c++11:
   script: "CI/ci-linux.sh gcc C++11"
   tags:
     - Linux
+    - stretch
 
 clang-c++11:
   stage: build
   script: "CI/ci-linux.sh clang C++11"
   tags:
     - Linux
+    - stretch   
 
 gcc-c++14:
   stage: build
   script: "CI/ci-linux.sh gcc C++14"
   tags:
     - Linux
+    - stretch    
 
 clang-c++14:
   stage: build
   script: "CI/ci-linux.sh clang C++14"
   tags: 
     - Linux
+    - stretch    
 
 macos-c++11:
   stage: build
@@ -51,6 +55,7 @@ cppcheck:
   script: "CI/ci-cppcheck.sh"
   tags:
     - Linux
+    - stretch    
   artifacts:
     paths:
       - cppcheck.log
@@ -265,6 +270,7 @@ Doc-publish:
   script: "CI/ci-doc.sh"
   tags:
      - Linux
+     - stretch     
 
 Sources:
   stage: deploy
@@ -273,6 +279,7 @@ Sources:
   script: "CI/ci-source.sh"
   tags:
      - Linux
+     - stretch     
   artifacts:
     paths:
       - OpenMesh*.zip
