--- a/src/OpenMesh/Apps/VDProgMesh/Synthesizer/CMakeLists.txt
+++ b/src/OpenMesh/Apps/VDProgMesh/Synthesizer/CMakeLists.txt
@@ -10,13 +10,10 @@ acg_append_files (headers "*.hh" .)
 acg_append_files (sources "*.cc" .)
 
 list (APPEND sources "../../QtViewer/QGLViewerWidget.cc")
-list (APPEND sources "../../QtViewer/MeshViewerWidgetT.cc")
 
 list (APPEND headers "../../QtViewer/QGLViewerWidget.hh")
 list (APPEND headers "../../QtViewer/MeshViewerWidgetT.hh")
-
-# remove template cc files from source file list
-acg_drop_templates (sources)
+list (APPEND headers "../../QtViewer/MeshViewerWidgetT_impl.hh")
 
 if (WIN32)
   acg_add_executable (Synthesizer WIN32 ${sources} ${headers})
