--- a/cmake/fixbundle.cmake.win.in
+++ b/cmake/fixbundle.cmake.win.in
@@ -17,11 +17,8 @@ endfunction(gp_item_default_embedded_path_override)
 
 include (BundleUtilities)
 
-# Get library paths
-get_filename_component(_GlutDir "@GLUT_glut_LIBRARY@" PATH)
-
 # fix all dependencies
-fixup_bundle ("@CMAKE_BINARY_DIR@/Build/Smoothing.exe" ""  "${_GlutDir};@QT_BINARY_DIR@")
+fixup_bundle ("@CMAKE_BINARY_DIR@/Build/Smoothing.exe" ""  "@QT_BINARY_DIR@")
 
 
 
