Use the ACG Directories

--- a/src/OpenMesh/Tools/CMakeLists.txt
+++ b/src/OpenMesh/Tools/CMakeLists.txt
@@ -120,7 +120,7 @@ target_include_directories(OpenMeshTools PUBLIC
   $<INSTALL_INTERFACE:include>)
 
 install(TARGETS OpenMeshTools EXPORT OpenMeshConfig
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+  ARCHIVE DESTINATION ${ACG_PROJECT_LIBDIR}
+  LIBRARY DESTINATION ${ACG_PROJECT_LIBDIR} 
+  RUNTIME DESTINATION ${ACG_PROJECT_BINDIR})
 
