--- a/src/OpenMesh/Core/CMakeLists.txt
+++ b/src/OpenMesh/Core/CMakeLists.txt
@@ -137,7 +137,7 @@ target_include_directories(OpenMeshCore PUBLIC
   $<INSTALL_INTERFACE:include>)
 
 install(TARGETS OpenMeshCore EXPORT OpenMeshConfig
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+  ARCHIVE DESTINATION ${ACG_PROJECT_LIBDIR}
+  LIBRARY DESTINATION ${ACG_PROJECT_LIBDIR}      
+  RUNTIME DESTINATION ${ACG_PROJECT_BINDIR})
 
