--- a/src/OpenMesh/Core/CMakeLists.txt
+++ b/src/OpenMesh/Core/CMakeLists.txt
@@ -133,7 +133,7 @@ install(DIRECTORY IO/
 endif ()
 
 target_include_directories(OpenMeshCore PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
   $<INSTALL_INTERFACE:include>)
 
 install(TARGETS OpenMeshCore EXPORT OpenMeshConfig
