--- a/CI/gitlab-ci/linux.yml
+++ b/CI/gitlab-ci/linux.yml
@@ -16,13 +16,14 @@ gcc-c++11-test-debug:
   script: "CI/ci-linux-test.sh gcc C++11 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-
+  dependencies: [gcc-c++11-build-debug]
 
 gcc-c++11-test-release:
   stage: test
   script: "CI/ci-linux-test.sh gcc C++11 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [gcc-c++11-build-release]
 
 gcc-c++11-build-debug:
   stage: build
@@ -47,12 +48,14 @@ clang-c++11-test-debug:
   script: "CI/ci-linux-test.sh clang C++11 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [clang-c++11-build-debug]
 
 clang-c++11-test-release:
   stage: test
   script: "CI/ci-linux-test.sh clang C++11 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [clang-c++11-build-release]
 
 clang-c++11-build-debug:
   stage: build
@@ -77,12 +80,14 @@ gcc-c++14-test-debug:
   script: "CI/ci-linux-test.sh gcc C++14 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [gcc-c++14-build-debug]
 
 gcc-c++14-test-release:
   stage: test
   script: "CI/ci-linux-test.sh gcc C++14 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [gcc-c++14-build-release]
 
 gcc-c++14-build-debug:
   stage: build
@@ -107,12 +112,14 @@ clang-c++14-test-debug:
   script: "CI/ci-linux-test.sh clang C++14 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [clang-c++14-build-debug]
 
 clang-c++14-test-release:
   stage: test
   script: "CI/ci-linux-test.sh clang C++14 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
+  dependencies: [clang-c++14-build-release]
 
 clang-c++14-build-debug:
   stage: build
