--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@
 # To make persistent changes changes files in               #
 # ./CI/gitlab-ci/ ...                                       #
 # and regenerate this file with the configuration tool      #
+# python3 ./CI/gitlab-ci/assemble-gitlab-ci.py              #
 #                                                           #
 #############################################################
 
@@ -25,138 +26,236 @@ cppcheck:
   stage: build
   script: "CI/ci-cppcheck.sh"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker] 
+  tags: [Docker]
+  timeout: 3h
   artifacts:
     paths:
       - cppcheck.log
 
-gcc-c++11-test-debug:
-  stage: test
-  script: "CI/ci-linux-test.sh gcc C++11 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [gcc-c++11-build-debug]
+#-----------  Job Informations:
+# Type:       Build: debug
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp11
 
-gcc-c++11-test-release:
-  stage: test
-  script: "CI/ci-linux-test.sh gcc C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [gcc-c++11-build-release]
-
-gcc-c++11-build-debug:
+build-debug-gcc-cpp11:
   stage: build
-  script: "CI/ci-linux-build.sh gcc C++11 debug"
+  script: "CI/ci-linux-build.sh gcc cpp11 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   artifacts:
     paths:
-    - build-debug-gcc-cpp11-Vector-Checks/
+    - build-gcc-cpp11-debug-Vector-Checks/
 
-gcc-c++11-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh gcc C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-release-gcc-cpp11-Vector-Checks/
+#-----------  Job Informations:
+# Type:       Test: debug
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp11
 
-clang-c++11-test-debug:
+test-debug-gcc-cpp11:
   stage: test
-  script: "CI/ci-linux-test.sh clang C++11 debug"
+  script: "CI/ci-linux-test.sh gcc cpp11 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-  dependencies: [clang-c++11-build-debug]
+  dependencies: [build-debug-gcc-cpp11]
 
-clang-c++11-test-release:
+#-----------  Job Informations:
+# Type:       Build: release
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp11
+
+build-release-gcc-cpp11:
+  stage: build
+  script: "CI/ci-linux-build.sh gcc cpp11 release"
+  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
+  tags: [Docker]
+  artifacts:
+    paths:
+    - build-gcc-cpp11-release-Vector-Checks/
+
+#-----------  Job Informations:
+# Type:       Test: release
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp11
+
+test-release-gcc-cpp11:
   stage: test
-  script: "CI/ci-linux-test.sh clang C++11 release"
+  script: "CI/ci-linux-test.sh gcc cpp11 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-  dependencies: [clang-c++11-build-release]
+  dependencies: [build-release-gcc-cpp11]
 
-clang-c++11-build-debug:
+#-----------  Job Informations:
+# Type:       Build: debug
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp11
+
+build-debug-clang-cpp11:
   stage: build
-  script: "CI/ci-linux-build.sh clang C++11 debug"
+  script: "CI/ci-linux-build.sh clang cpp11 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   artifacts:
     paths:
-    - build-debug-clang-cpp11-Vector-Checks/
+    - build-clang-cpp11-debug-Vector-Checks/
 
-clang-c++11-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh clang C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker] 
-  artifacts:
-    paths:
-    - build-release-clang-cpp11-Vector-Checks/
+#-----------  Job Informations:
+# Type:       Test: debug
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp11
 
-gcc-c++14-test-debug:
+test-debug-clang-cpp11:
   stage: test
-  script: "CI/ci-linux-test.sh gcc C++14 debug"
+  script: "CI/ci-linux-test.sh clang cpp11 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-  dependencies: [gcc-c++14-build-debug]
+  dependencies: [build-debug-clang-cpp11]
 
-gcc-c++14-test-release:
+#-----------  Job Informations:
+# Type:       Build: release
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp11
+
+build-release-clang-cpp11:
+  stage: build
+  script: "CI/ci-linux-build.sh clang cpp11 release"
+  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
+  tags: [Docker]
+  artifacts:
+    paths:
+    - build-clang-cpp11-release-Vector-Checks/
+
+#-----------  Job Informations:
+# Type:       Test: release
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp11
+
+test-release-clang-cpp11:
   stage: test
-  script: "CI/ci-linux-test.sh gcc C++14 release"
+  script: "CI/ci-linux-test.sh clang cpp11 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-  dependencies: [gcc-c++14-build-release]
+  dependencies: [build-release-clang-cpp11]
 
-gcc-c++14-build-debug:
+#-----------  Job Informations:
+# Type:       Build: debug
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp14
+
+build-debug-gcc-cpp14:
   stage: build
-  script: "CI/ci-linux-build.sh gcc C++14 debug"
+  script: "CI/ci-linux-build.sh gcc cpp14 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   artifacts:
     paths:
-    - build-debug-gcc-cpp14-Vector-Checks/
+    - build-gcc-cpp14-debug-Vector-Checks/
 
-gcc-c++14-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh gcc C++14 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-release-gcc-cpp14-Vector-Checks/
+#-----------  Job Informations:
+# Type:       Test: debug
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp14
 
-clang-c++14-test-debug:
+test-debug-gcc-cpp14:
   stage: test
-  script: "CI/ci-linux-test.sh clang C++14 debug"
+  script: "CI/ci-linux-test.sh gcc cpp14 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-  dependencies: [clang-c++14-build-debug]
+  dependencies: [build-debug-gcc-cpp14]
 
-clang-c++14-test-release:
+#-----------  Job Informations:
+# Type:       Build: release
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp14
+
+build-release-gcc-cpp14:
+  stage: build
+  script: "CI/ci-linux-build.sh gcc cpp14 release"
+  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
+  tags: [Docker]
+  artifacts:
+    paths:
+    - build-gcc-cpp14-release-Vector-Checks/
+
+#-----------  Job Informations:
+# Type:       Test: release
+# OS:         Linux
+# Compiler:   gcc
+# Language:   cpp14
+
+test-release-gcc-cpp14:
   stage: test
-  script: "CI/ci-linux-test.sh clang C++14 release"
+  script: "CI/ci-linux-test.sh gcc cpp14 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
-  dependencies: [clang-c++14-build-release]
+  dependencies: [build-release-gcc-cpp14]
 
-clang-c++14-build-debug:
+#-----------  Job Informations:
+# Type:       Build: debug
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp14
+
+build-debug-clang-cpp14:
   stage: build
-  script: "CI/ci-linux-build.sh clang C++14 debug"
+  script: "CI/ci-linux-build.sh clang cpp14 debug"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   artifacts:
     paths:
-    - build-debug-clang-cpp14-Vector-Checks/
+    - build-clang-cpp14-debug-Vector-Checks/
 
-clang-c++14-build-release:
+#-----------  Job Informations:
+# Type:       Test: debug
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp14
+
+test-debug-clang-cpp14:
+  stage: test
+  script: "CI/ci-linux-test.sh clang cpp14 debug"
+  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
+  tags: [Docker]
+  dependencies: [build-debug-clang-cpp14]
+
+#-----------  Job Informations:
+# Type:       Build: release
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp14
+
+build-release-clang-cpp14:
   stage: build
-  script: "CI/ci-linux-build.sh clang C++14 release"
+  script: "CI/ci-linux-build.sh clang cpp14 release"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   artifacts:
     paths:
-    - build-release-clang-cpp14-Vector-Checks/
+    - build-clang-cpp14-release-Vector-Checks/
+
+#-----------  Job Informations:
+# Type:       Test: release
+# OS:         Linux
+# Compiler:   clang
+# Language:   cpp14
+
+test-release-clang-cpp14:
+  stage: test
+  script: "CI/ci-linux-test.sh clang cpp14 release"
+  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
+  tags: [Docker]
+  dependencies: [build-release-clang-cpp14]
+
 
 # -----------------
 # Apple tasks
