--- a/CI/gitlab-ci/linux.yml
+++ b/CI/gitlab-ci/linux.yml
@@ -6,135 +6,13 @@ cppcheck:
   stage: build
   script: "CI/ci-cppcheck.sh"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker] 
+  tags: [Docker]
+  timeout: 3h
   artifacts:
     paths:
       - cppcheck.log
 
-gcc-c++11-test-debug:
-  stage: test
-  script: "CI/ci-linux-test.sh gcc C++11 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [gcc-c++11-build-debug]
-
-gcc-c++11-test-release:
-  stage: test
-  script: "CI/ci-linux-test.sh gcc C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [gcc-c++11-build-release]
-
-gcc-c++11-build-debug:
-  stage: build
-  script: "CI/ci-linux-build.sh gcc C++11 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-debug-gcc-cpp11-Vector-Checks/
-
-gcc-c++11-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh gcc C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-release-gcc-cpp11-Vector-Checks/
-
-clang-c++11-test-debug:
-  stage: test
-  script: "CI/ci-linux-test.sh clang C++11 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [clang-c++11-build-debug]
-
-clang-c++11-test-release:
-  stage: test
-  script: "CI/ci-linux-test.sh clang C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [clang-c++11-build-release]
-
-clang-c++11-build-debug:
-  stage: build
-  script: "CI/ci-linux-build.sh clang C++11 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-debug-clang-cpp11-Vector-Checks/
-
-clang-c++11-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh clang C++11 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker] 
-  artifacts:
-    paths:
-    - build-release-clang-cpp11-Vector-Checks/
-
-gcc-c++14-test-debug:
-  stage: test
-  script: "CI/ci-linux-test.sh gcc C++14 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [gcc-c++14-build-debug]
-
-gcc-c++14-test-release:
-  stage: test
-  script: "CI/ci-linux-test.sh gcc C++14 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [gcc-c++14-build-release]
-
-gcc-c++14-build-debug:
-  stage: build
-  script: "CI/ci-linux-build.sh gcc C++14 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-debug-gcc-cpp14-Vector-Checks/
-
-gcc-c++14-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh gcc C++14 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-release-gcc-cpp14-Vector-Checks/
-
-clang-c++14-test-debug:
-  stage: test
-  script: "CI/ci-linux-test.sh clang C++14 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [clang-c++14-build-debug]
-
-clang-c++14-test-release:
-  stage: test
-  script: "CI/ci-linux-test.sh clang C++14 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  dependencies: [clang-c++14-build-release]
-
-clang-c++14-build-debug:
-  stage: build
-  script: "CI/ci-linux-build.sh clang C++14 debug"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-debug-clang-cpp14-Vector-Checks/
-
-clang-c++14-build-release:
-  stage: build
-  script: "CI/ci-linux-build.sh clang C++14 release"
-  image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
-  tags: [Docker]
-  artifacts:
-    paths:
-    - build-release-clang-cpp14-Vector-Checks/
+{linux-template-job.yml, COMPILER=gcc, LANGUAGE=cpp11}
+{linux-template-job.yml, COMPILER=clang, LANGUAGE=cpp11}
+{linux-template-job.yml, COMPILER=gcc, LANGUAGE=cpp14}
+{linux-template-job.yml, COMPILER=clang, LANGUAGE=cpp14}
