Changed the .gitlab-ci.yml structure
Beginned with new building system
.gitlab-ci.yml can now be generated by the script assemble-gitlab-ci.py.

Therefore the .gitlab-ci.yml configuration file can be split into several smaller files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
 # This is an auto generated file. Do not make               #
 # changes to this file. They possible will be overriden.    #
 #                                                           #
-# To make persistent changes changes files in               #
+# To make persistent changes, changes files in              #
 # ./CI/gitlab-ci/ ...                                       #
 # and regenerate this file with the configuration tool      #
 # python3 ./CI/gitlab-ci/assemble-gitlab-ci.py              #
