Fixed missing cmake entry

--- a/src/OpenMesh/Apps/Subdivider/SubdividerGui/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Subdivider/SubdividerGui/CMakeLists.txt
@@ -16,6 +16,7 @@ acg_append_files (headers "*.hh" ${directories})
 
 list (APPEND headers "../../QtViewer/MeshViewerWidgetT_impl.hh")
 list (APPEND headers "../../QtViewer/MeshViewerWidget.hh")
+list (APPEND headers "../../QtViewer/QGLViewerWidget.hh")
 
 
 set (sources
