--- a/src/OpenMesh/Apps/Decimating/commandlineDecimater/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Decimating/commandlineDecimater/CMakeLists.txt
@@ -5,12 +5,7 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-set (sources
-  ../decimater.cc
-)
-
-acg_add_executable (commandlineDecimater ${sources})
+acg_add_executable (commandlineDecimater ../decimater.cc)
 
 target_link_libraries (commandlineDecimater
   OpenMeshCore
