--- a/src/OpenMesh/Apps/Smoothing/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Smoothing/CMakeLists.txt
@@ -5,11 +5,7 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-acg_append_files (headers "*.hh" .)
-acg_append_files (sources "*.cc" .)
-
-acg_add_executable (Smoothing ${headers} ${sources})
+acg_add_executable (Smoothing smooth.cc)
 
 target_link_libraries (Smoothing
   OpenMeshCore
