--- a/src/OpenMesh/Apps/mconvert/CMakeLists.txt
+++ b/src/OpenMesh/Apps/mconvert/CMakeLists.txt
@@ -5,11 +5,7 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-acg_append_files (headers "*.hh" .)
-acg_append_files (sources "*.cc" .)
-
-acg_add_executable (mconvert ${headers} ${sources})
+acg_add_executable (mconvert mconvert.cc)
 
 target_link_libraries (mconvert
   OpenMeshCore
