--- a/src/OpenMesh/Apps/VDProgMesh/Analyzer/CMakeLists.txt
+++ b/src/OpenMesh/Apps/VDProgMesh/Analyzer/CMakeLists.txt
@@ -5,12 +5,7 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-set (sources
-  ./vdpmanalyzer.cc
-)
-
-acg_add_executable (Analyzer ${sources})
+acg_add_executable (Analyzer vdpmanalyzer.cc)
 
 target_link_libraries (Analyzer
   OpenMeshCore
