--- a/src/OpenMesh/Apps/Dualizer/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Dualizer/CMakeLists.txt
@@ -2,14 +2,9 @@ include (ACGCommon)
 
 include_directories (
   ../../..
-  ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-acg_append_files (headers "*.hh" .)
-acg_append_files (sources "*.cc" .)
-
-acg_add_executable (Dualizer ${headers} ${sources})
+acg_add_executable (Dualizer dualizer.cc)
 
 target_link_libraries (Dualizer
   OpenMeshCore
