--- a/src/OpenMesh/Apps/Subdivider/commandlineSubdivider/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Subdivider/commandlineSubdivider/CMakeLists.txt
@@ -5,12 +5,7 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-set (sources
-  ../subdivider.cc
-)
-
-acg_add_executable (commandlineSubdivider ${sources})
+acg_add_executable (commandlineSubdivider ../subdivider.cc)
 
 target_link_libraries (commandlineSubdivider
   OpenMeshCore
