--- a/src/OpenMesh/Apps/VDProgMesh/Synthesizer/CMakeLists.txt
+++ b/src/OpenMesh/Apps/VDProgMesh/Synthesizer/CMakeLists.txt
@@ -5,15 +5,16 @@ include_directories (
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-# collect all header and source files
-acg_append_files (headers "*.hh" .)
-acg_append_files (sources "*.cc" .)
+set (headers
+  VDPMSynthesizerViewerWidget.hh
+)
 
-list (APPEND sources "../../QtViewer/QGLViewerWidget.cc")
+set (sources
+  ../../QtViewer/QGLViewerWidget.cc
+  vdpmsynthesizer.cc
+  VDPMSynthesizerViewerWidget.cc
+)
 
-list (APPEND headers "../../QtViewer/QGLViewerWidget.hh")
-list (APPEND headers "../../QtViewer/MeshViewerWidgetT.hh")
-list (APPEND headers "../../QtViewer/MeshViewerWidgetT_impl.hh")
 
 if (WIN32)
   acg_add_executable (Synthesizer WIN32 ${sources} ${headers})
