--- a/CI/gitlab-ci/linux-template-test-job.yml
+++ b/CI/gitlab-ci/linux-template-test-job.yml
@@ -10,3 +10,13 @@ test-{{BUILDTYPE}}-{{COMPILER}}-{{LANGUAGE}}:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-{{BUILDTYPE}}-{{COMPILER}}-{{LANGUAGE}}]
+  artifacts: 
+     Unittests/report.xml
+     Unittests/report-customvec.xml
+     Unittests/report-doublevec.xml
+  reports:
+     junit:
+        Unittests/report.xml
+        Unittests/report-customvec.xml
+        Unittests/report-doublevec.xml
+
