--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,8 @@ test-debug-gcc-cpp11:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-debug-gcc-cpp11]
-  artifacts: 
+  needs: [build-debug-gcc-cpp11]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -94,7 +95,8 @@ test-release-gcc-cpp11:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-release-gcc-cpp11]
-  artifacts: 
+  needs: [build-release-gcc-cpp11]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -129,7 +131,8 @@ test-debug-clang-cpp11:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-debug-clang-cpp11]
-  artifacts: 
+  needs: [build-debug-clang-cpp11]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -164,7 +167,8 @@ test-release-clang-cpp11:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-release-clang-cpp11]
-  artifacts: 
+  needs: [build-release-clang-cpp11]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -199,7 +203,8 @@ test-debug-gcc-cpp14:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-debug-gcc-cpp14]
-  artifacts: 
+  needs: [build-debug-gcc-cpp14]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -234,7 +239,8 @@ test-release-gcc-cpp14:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-release-gcc-cpp14]
-  artifacts: 
+  needs: [build-release-gcc-cpp14]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -269,7 +275,8 @@ test-debug-clang-cpp14:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-debug-clang-cpp14]
-  artifacts: 
+  needs: [build-debug-clang-cpp14]
+  artifacts:
     reports:
       junit:
         report.xml
@@ -304,7 +311,9 @@ test-release-clang-cpp14:
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags: [Docker]
   dependencies: [build-release-clang-cpp14]
-  artifacts: 
+  needs: [build-release-clang-cpp14]
+  artifacts:
+  	- *
     reports:
       junit:
         report.xml
