--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -339,11 +339,11 @@ macos-cpp11-debug:
       paths:
         - build-debug-cpp11/*.dmg
         - build-debug-cpp11/*.tar.gz
-      reports:
-        junit:
-          - build-debug-cpp11/Unittests/report.xml
-          - build-debug-cpp11/Unittests/report-customvec.xml
-          - build-debug-cpp11/Unittests/report-doublevec.xml
+#      reports:
+#        junit:
+#          - build-debug-cpp11/Unittests/report.xml
+#          - build-debug-cpp11/Unittests/report-customvec.xml
+#          - build-debug-cpp11/Unittests/report-doublevec.xml
 
 #-----------  Job Informations:
 # Type:       Build+Test: release
@@ -359,11 +359,11 @@ macos-cpp11-release:
       paths:
         - build-release-cpp11/*.dmg
         - build-release-cpp11/*.tar.gz
-      reports:
-        junit:
-          - build-release-cpp11/Unittests/report.xml
-          - build-release-cpp11/Unittests/report-customvec.xml
-          - build-release-cpp11/Unittests/report-doublevec.xml
+#      reports:
+#        junit:
+#          - build-release-cpp11/Unittests/report.xml
+#          - build-release-cpp11/Unittests/report-customvec.xml
+#          - build-release-cpp11/Unittests/report-doublevec.xml
 
 
 #-----------  Job Informations:
@@ -380,11 +380,11 @@ macos-cpp14-debug:
       paths:
         - build-debug-cpp14/*.dmg
         - build-debug-cpp14/*.tar.gz
-      reports:
-        junit:
-          - build-debug-cpp14/Unittests/report.xml
-          - build-debug-cpp14/Unittests/report-customvec.xml
-          - build-debug-cpp14/Unittests/report-doublevec.xml
+#      reports:
+#        junit:
+#          - build-debug-cpp14/Unittests/report.xml
+#          - build-debug-cpp14/Unittests/report-customvec.xml
+#          - build-debug-cpp14/Unittests/report-doublevec.xml
 
 #-----------  Job Informations:
 # Type:       Build+Test: release
@@ -400,11 +400,11 @@ macos-cpp14-release:
       paths:
         - build-release-cpp14/*.dmg
         - build-release-cpp14/*.tar.gz
-      reports:
-        junit:
-          - build-release-cpp14/Unittests/report.xml
-          - build-release-cpp14/Unittests/report-customvec.xml
-          - build-release-cpp14/Unittests/report-doublevec.xml
+#      reports:
+#        junit:
+#          - build-release-cpp14/Unittests/report.xml
+#          - build-release-cpp14/Unittests/report-customvec.xml
+#          - build-release-cpp14/Unittests/report-doublevec.xml
 
 
 
