--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,11 @@ test-debug-gcc-cpp11:
   tags: [Docker]
   dependencies: [build-debug-gcc-cpp11]
   needs: [build-debug-gcc-cpp11]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-gcc-cpp11-debug-Vector-Checks
+    - ls -lh build-gcc-cpp11-debug-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -96,6 +101,11 @@ test-release-gcc-cpp11:
   tags: [Docker]
   dependencies: [build-release-gcc-cpp11]
   needs: [build-release-gcc-cpp11]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-gcc-cpp11-release-Vector-Checks
+    - ls -lh build-gcc-cpp11-release-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -132,6 +142,11 @@ test-debug-clang-cpp11:
   tags: [Docker]
   dependencies: [build-debug-clang-cpp11]
   needs: [build-debug-clang-cpp11]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-clang-cpp11-debug-Vector-Checks
+    - ls -lh build-clang-cpp11-debug-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -168,6 +183,11 @@ test-release-clang-cpp11:
   tags: [Docker]
   dependencies: [build-release-clang-cpp11]
   needs: [build-release-clang-cpp11]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-clang-cpp11-release-Vector-Checks
+    - ls -lh build-clang-cpp11-release-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -204,6 +224,11 @@ test-debug-gcc-cpp14:
   tags: [Docker]
   dependencies: [build-debug-gcc-cpp14]
   needs: [build-debug-gcc-cpp14]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-gcc-cpp14-debug-Vector-Checks
+    - ls -lh build-gcc-cpp14-debug-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -240,6 +265,11 @@ test-release-gcc-cpp14:
   tags: [Docker]
   dependencies: [build-release-gcc-cpp14]
   needs: [build-release-gcc-cpp14]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-gcc-cpp14-release-Vector-Checks
+    - ls -lh build-gcc-cpp14-release-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -276,6 +306,11 @@ test-debug-clang-cpp14:
   tags: [Docker]
   dependencies: [build-debug-clang-cpp14]
   needs: [build-debug-clang-cpp14]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-clang-cpp14-debug-Vector-Checks
+    - ls -lh build-clang-cpp14-debug-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
@@ -312,6 +347,11 @@ test-release-clang-cpp14:
   tags: [Docker]
   dependencies: [build-release-clang-cpp14]
   needs: [build-release-clang-cpp14]
+  after_script:
+    - echo Debugging
+    - ls -l .
+    - ls -lh build-clang-cpp14-release-Vector-Checks
+    - ls -lh build-clang-cpp14-release-Vector-Checks/Unittests
   artifacts:
     reports:
       junit:
